# 2025.10-AI_ROBOT

./: README.md
Opencv/c++/: ex1  project
Python/: SQLite  project01  stock_prediction_lstm.py
Python/Team_Project/Team_HelloWorld/: camera.py  deep_learning_model.py  deep_model_test.py  link.py  main.ui  main_code.py  pyqt.py  robot.py
Python/deep_learning/BMI/: main.py
Python/deep_learning/cancer/: data_reader.py
Python/deep_learning/iris/: data_reader.py  main.py
Python/deep_learning/school/: data_reader  main
Python/project/: number_baseball_01  number_baseball_02  number_baseball_03  number_baseball_04  number_baseball_05  number_baseball_06  number_baseball_07  number_baseball_08
Python/project_turtlebot/my_project/: README.md  create_map  package.xml  qt.ui  qt_ui.py  setup.py  summon_gui.py  summon_server.py  summon_server_1.01.py
Python/project_turtlebot/my_project/my_project_interfaces/: CMakeLists.txt  package.xml
Python/project_turtlebot/my_project/my_project_interfaces/action/: Summon.action
Python/robot_turtlebot/my_first_ros_rclpy_pkg/: setup.py
Python/robot_turtlebot/my_move_turtle_pkg/: dist_turtle_action_server.py  move_turtle_pub.py  my_service_server.py  turtle_cmd_and_pose.py
Python/robot_turtlebot/my_time_roy_pkg/: real_time_pub.py  setup.py
baekjoon/: 01000.c  1001.c  10998.c
c/test/: quiz02.c  quiz03.c  quiz04.c  quiz05.c  quiz06.c  quiz07.c  quiz08.c  quiz09.c  quiz1.c  quiz10.c  quiz11.c  quiz12.c  quiz13.c  quiz14.c  quiz15.c  quiz16.c
